--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,10 +3,10 @@ cmake_minimum_required(VERSION 2.8)
 ########################################
 # Define include directories
 ########################################
-set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/source/tools)
+set(COMMON_INCLUDES ./tools/)
 include_directories(${COMMON_INCLUDES})
 
 ########################################
 # Source files
 ########################################
-file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/source/tools*.cc)
+file(GLOB SRC_FILES ./tools/*.cc)
