--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,88 +1,67 @@
 cmake_minimum_required(VERSION 2.8)
 
-########################################
-# Project setup
-########################################
+# Make PROJECT_SOURCE_DIR, PROJECT_BINARY_DIR, and PROJECT_NAME available.
 set(PROJECT_NAME satu_ge_proj)
 project(${PROJECT_NAME})
-# After project(..) is called, the following variables are available:
-# * PROJECT_SOURCE_DIR - Top level source directory for the project
-# * PROJECT_BINARY_DIR - Full path to build directory for project
 
-########################################
-# Set up the compiler flags
-########################################
 set(CMAKE_CXX_FLAGS "-g -Wall")
+
+# If you want your own include/ directory, set this, and then you can do
+# include_directories(${COMMON_INCLUDES}) in other CMakeLists.txt files.
+# set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
+
+#----------------------------------------------------------------------------
+# Define project sources and includes
+#----------------------------------------------------------------------------
+set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/source)
+include_directories(${COMMON_INCLUDES})
+file(GLOB_RECURSE SRC_FILES ${PROJECT_SOURCE_DIR}/source/*.cc)
+file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/tests/*.cc)
+# list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/main.cpp)
+
 set(CMAKE_CXX_STANDARD 14)
 
-########################################
-# Define include directories
-########################################
-include_directories(${PROJECT_SOURCE_DIR}/source)
-
-########################################
-# Source files
-########################################
-# file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cc)
-
-########################################
-# Main -- separate executable
-########################################
-# list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/main.cc)
+################################
+# Normal Libraries & Executables
+################################
+add_library(satu_ge_proj_lib ${SRC_FILES})
+# add_executable(project1 ${PROJECT_SOURCE_DIR}/src/main.cpp)
 # Key idea: SEPARATE OUT your main() function into its own file so it can be its
 # own executable. Separating out main() means you can add this library to be
 # used elsewhere (e.g linking to the test executable).
 
-########################################
-# Compile source files into a library
-########################################
-# add_library(project1_lib ${SRC_FILES})
-
-########################################
-# Main is separate (e.g. library client)
-########################################
-# add_executable(project1 ${PROJECT_SOURCE_DIR}/src/main.cc)
-
-########################################
-# linking Main against the library
-########################################
 # target_link_libraries(project1 project1_lib)
 
-########################################
+################################
 # Testing
-########################################
+################################
+
 # Options. Turn on with 'cmake -Dmyvarname=ON'.
-# option(BUILD_TESTS "Build all tests." ON) # Makes boolean 'test' available.
+option(BUILD_TESTS "Build all tests." ON) # Makes boolean 'test' available.
 
-# google test is a git submodule for the project, and it is also cmake-based
-add_subdirectory(./googletest)
+if (BUILD_TESTS)
+  # This adds another subdirectory, which has 'project(gtest)'.
+  add_subdirectory(./googletest)
 
-enable_testing()
-# 
-# Include the gtest library. gtest_SOURCE_DIR is available due to
-# 'project(gtest)' above.
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
- 
-########################################
-# Test files
-########################################
-file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/tests/*.cc)
+  enable_testing()
 
-########################################
-# Unit Tests
-########################################
-add_executable(runUnitTests ${TEST_SRC_FILES})
+  # Include the gtest library. gtest_SOURCE_DIR is available due to
+  # 'project(gtest)' above.
+  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-########################################
-# Standard linking to gtest stuff.
-########################################
-target_link_libraries(runUnitTests gtest gtest_main)
+  ##############
+  # Unit Tests
+  ##############
+  add_executable(runUnitTests ${TEST_SRC_FILES})
 
-########################################
-# Extra linking for the project.
-########################################
-# target_link_libraries(runUnitTests project1_lib)
+  # Standard linking to gtest stuff.
+  target_link_libraries(runUnitTests gtest gtest_main)
 
-# This is so you can do 'make test' to see all your tests run, instead of
-# manually running the executable runUnitTests to see those specific tests.
-add_test(UnitTests runUnitTests)
+  # Extra linking for the project.
+  target_link_libraries(runUnitTests satu_ge_proj_lib)
+
+  # This is so you can do 'make test' to see all your tests run, instead of
+  # manually running the executable runUnitTests to see those specific tests.
+  add_test(UnitTests runUnitTests)
+
+endif()
